--- a/css/Статьи/article.css
+++ b/css/Статьи/article.css
@@ -19,16 +19,16 @@ nav::before{
     left: 0;
     z-index: -1;
 }
-ul {
+nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
     height: 7vh;
 }
-ul li{
+nav ul li{
     float: left;
 }
-ul li a{
+nav ul li a{
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     display: block;
@@ -39,10 +39,79 @@ ul li a{
     line-height: 7vh;
 }
 
-ul li a:hover{
+nav ul li a:hover{
     background: #69bdb7;
     transition: .2s;
 }
 .line {
     border-bottom: .5vh  solid #65C9FF; /* Параметры линии */
    }
+
+   nav {
+    width: 100vw;
+    margin: 0 auto;
+    position: fixed;
+    top: 0;
+    z-index: +1;
+}
+.list li a{
+    position: relative;
+    top: 27vh;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3vh;
+    font-size: 3vw;
+    margin-left: 18vw;
+    width: 45vw;
+    text-align: center;
+    list-style: none;
+    transition: .2s;
+    text-decoration: none;
+    color: black;
+    text-decoration: none;
+}
+
+.list :hover{
+    color: #218294;
+    font-size: 6vw;
+    font-size: 6vh;
+    transition: .2s;
+    left: -3vw;
+}
+.wood{
+    position: relative;
+    width: 20vw;
+    margin-left: 69vw;
+    top: 5vh;
+}
+
+.list2 li {
+    position: relative;
+    top: 32.5vh;
+    font-size: 3vh;
+    font-size: 3vw;
+    
+    transition: .2s;
+    margin-left: 30vw;
+    width: 70vw;
+    text-align: center;
+    
+}
+.list2 li a{
+    color: black;
+    list-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+.list2 :hover{
+    color: #218294;
+    font-size: 6vw;
+    font-size: 6vh;
+    transition: .2s;
+    left: 0vw;
+}
+.wood2{
+    position: relative;
+    width: 21vw;
+    margin-left: 13vw;
+    top: 5vh;
+}
